<resources>
    <string name="app_name">BudgetManager</string>

    <string name="hello_world">Hello world!</string>
    <string name="current_balance">Your total balance for the month:</string>
    <string name="add_revenue">Add Revenue</string>
    <string name="add_expense">Add Expense</string>
    <string name="change_balance">You are going to change your balance by:</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_revenue">AddRevenue</string>
    <string name="title_activity_add_expense">AddExpense</string>
    <string name="amount">Amount</string>
    <string name="item">Item</string>
    <string name="location">Location</string>
    <string name="category">Category</string>
    <string name="cashflow">View Cashflow</string>
    <string name="title_activity_cashflow_list">CashflowList</string>
    <string name="title_activity_cashflow_row">CashflowRow</string>


    <string name="all_shared_pref">comm.app.jgconsultants.allSharedPref</string>
    <string name="saved_total_budget">TotalBudget</string>
</resources>
