<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".OpeningPage">

    <TextView
        android:text="@string/current_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/current_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/add_revenue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addRevenue"/>

    <Button
        android:text="@string/add_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addExpense"/>

    <Button
        android:text="@string/cashflow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="seeCashflow"/>
</LinearLayout>
